--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Vlada Care | Trauma-Informed Psychotherapy</title>
+    <meta name="description" content="Trauma-informed, somatic and experiential psychotherapy with Vlada Zapesotsky, PhD. Nervous-system–based care for adults, parents, adolescents, and leaders.">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       window.FontAwesomeConfig = {
