--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
             </p>
 <div class="flex space-x-4">
   <a
-    href="https://www.linkedin.com/in/USERNAME/"
+    href="https://www.linkedin.com/in/vlada-zapesotsky-48237a1/"
     class="w-12 h-12 bg-gray-800/50 backdrop-blur-sm rounded-full flex items-center justify-center hover:bg-primary-brand transition-all duration-300 hover:scale-110"
   >
     <i class="fa-brands fa-linkedin"></i>
