--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="flex items-center space-x-6">
           <a href="#" class="text-gray-700 hover:text-primary-brand transition font-light">Home</a>
           <a href="#" class="text-gray-700 hover:text-primary-brand transition font-light">About</a>
-          <a href="#" class="text-primary-brand font-medium">Work With Me</a>
+          <a href="/WorkWithMe.html" class="text-primary-brand font-medium">Work With Me</a>
           <button class="px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg">
             Schedule Consultation
           </button>
