--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     <nav class="hidden md:flex items-center space-x-12">
       <a href="#" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
       <a href="#" class="text-primary-brand font-semibold tracking-wide">About</a>
-      <a href="/workwithme.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
+      <a href="workwithme.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
     </nav>
     <div class="flex items-center space-x-6">
       <button class="px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg">
