--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -114,9 +114,9 @@
           Vlada Zapesotsky
         </div>
         <div class="flex items-center space-x-6">
-          <a href="#" class="text-gray-700 hover:text-primary-brand transition font-light">Home</a>
-          <a href="#" class="text-gray-700 hover:text-primary-brand transition font-light">About</a>
-          <a href="#" class="text-primary-brand font-medium">Work With Me</a>
+          <a href="home.html" class="text-gray-700 hover:text-primary-brand transition font-light">Home</a>
+          <a href="index.html" class="text-gray-700 hover:text-primary-brand transition font-light">About</a>
+          <a href="WorkWithMe.html" class="text-primary-brand font-medium">Work With Me</a>
           <button class="px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg">
             Schedule Consultation
           </button>
