--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
       Vlada Zapesotsky
     </div>
     <nav class="hidden md:flex items-center space-x-12">
-      <a href="#" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
-      <a href="#" class="text-primary-brand font-semibold tracking-wide">About</a>
+      <a href="home.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
+      <a href="index.html" class="text-primary-brand font-semibold tracking-wide">About</a>
       <a href="WorkWithMe.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
     </nav>
     <div class="flex items-center space-x-6">
