--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
       Vlada Zapesotsky
     </div>
     <nav class="hidden md:flex items-center space-x-12">
-      <a href="home.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
-      <a href="index.html" class="text-primary-brand font-semibold tracking-wide">About</a>
-      <a href="WorkWithMe.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
+      <a href="#" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
+      <a href="#" class="text-primary-brand font-semibold tracking-wide">About</a>
+      <a href="#" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
     </nav>
     <div class="flex items-center space-x-6">
       <button class="px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg">
@@ -1104,7 +1104,14 @@
               Certified Trauma Specialist providing compassionate,
               trauma-informed experiential support for lasting transformation.
             </p>
-            <div class="flex space-x-4"><a href="#" class="w-12 h-12 bg-gray-800/50 backdrop-blur-sm rounded-full flex items-center justify-center hover:bg-primary-brand transition-all duration-300 hover:scale-110"><i class="fa-brands fa-linkedin"></i></a></div>
+<div class="flex space-x-4">
+  <a
+    href="https://www.linkedin.com/in/USERNAME/"
+    class="w-12 h-12 bg-gray-800/50 backdrop-blur-sm rounded-full flex items-center justify-center hover:bg-primary-brand transition-all duration-300 hover:scale-110"
+  >
+    <i class="fa-brands fa-linkedin"></i>
+  </a>
+</div>
           </div>
           <div>
             <h4 class="heading-font text-xl font-light text-white mb-6">Quick
