--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -655,10 +655,13 @@
               Certified Trauma Specialist providing compassionate, trauma-informed experiential support for lasting transformation.
             </p>
             <div class="flex space-x-4">
-              <a href="#" class="w-12 h-12 bg-gray-800/50 backdrop-blur-sm rounded-full flex items-center justify-center hover:bg-primary-brand transition-all duration-300 hover:scale-110">
-                <i class="fa-brands fa-linkedin"></i>
-              </a>
-            </div>
+  <a
+    href="https://www.linkedin.com/in/vlada-zapesotsky-48237a1/"
+    class="w-12 h-12 bg-gray-800/50 backdrop-blur-sm rounded-full flex items-center justify-center hover:bg-primary-brand transition-all duration-300 hover:scale-110"
+  >
+    <i class="fa-brands fa-linkedin"></i>
+  </a>
+</div>
           </div>
           <div>
             <h4 class="heading-font text-xl font-light text-white mb-6">Quick Links</h4>
