--- a/index.html
+++ b/index.html
@@ -335,11 +335,12 @@
     href="https://app.acuityscheduling.com/schedule.php?owner=37720609&ref=booking_button"
     target="_blank"
     rel="noopener noreferrer"
-    class="acuity-embed-button px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg"
+    class="acuity-embed-button inline-flex items-center justify-center px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg appearance-none no-underline"
   >
     Schedule Consultation
   </a>
 </div>
+
 
   </div>
 </header>
