--- a/index.html
+++ b/index.html
@@ -331,17 +331,13 @@
       <a href="WorkWithMe.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
     </nav>
     <div class="flex items-center space-x-6">
-  <a
-    href="https://app.acuityscheduling.com/schedule.php?owner=37720609&ref=booking_button"
-    target="_blank"
-    rel="noopener noreferrer"
-    class="acuity-embed-button inline-flex items-center justify-center px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg appearance-none no-underline"
-  >
-    Schedule Consultation
-  </a>
-</div>
-
-
+      <button class="px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg">
+        Schedule Consultation
+      </button>
+      <button class="md:hidden text-primary-brand">
+        <i class="fa-solid fa-bars text-2xl"></i>
+      </button>
+    </div>
   </div>
 </header>
     <section id="hero-about" class="watercolor-bg watercolor-overlay relative py-32 lg:py-40">
@@ -1151,16 +1147,6 @@
         </div>
       </div>
     </footer>
-  <link
-  rel="stylesheet"
-  href="https://embed.acuityscheduling.com/embed/button/37720609.css"
-  id="acuity-button-styles"
-/>
-
-<script
-  src="https://embed.acuityscheduling.com/embed/button/37720609.js"
-  async
-></script>
-
+  
 
 </body></html>
