--- a/index.html
+++ b/index.html
@@ -331,13 +331,15 @@
       <a href="WorkWithMe.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
     </nav>
     <div class="flex items-center space-x-6">
-      <button class="px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg">
-        Schedule Consultation
-      </button>
-      <button class="md:hidden text-primary-brand">
-        <i class="fa-solid fa-bars text-2xl"></i>
-      </button>
-    </div>
+  <button
+    type="button"
+    onclick="window.open('https://app.acuityscheduling.com/schedule.php?owner=37720609', '_blank', 'noopener,noreferrer')"
+    class="px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg"
+  >
+    Schedule Consultation
+  </button>
+</div>
+
   </div>
 </header>
     <section id="hero-about" class="watercolor-bg watercolor-overlay relative py-32 lg:py-40">
