--- a/index.html
+++ b/index.html
@@ -406,8 +406,13 @@
             </div>
             <div class="flex flex-col sm:flex-row gap-5 pt-4"><button class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
                 Explore Services
-              </button><button class="px-10 py-4 bg-white/80 backdrop-blur-sm text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white transition-all duration-300">
-                Schedule Consultation
+              </button>
+                
+<button
+  type="button"
+  onclick="window.open('https://app.acuityscheduling.com/schedule.php?owner=37720609', '_blank', 'noopener,noreferrer')"
+  class="px-10 py-4 bg-white/80 backdrop-blur-sm text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white transition-all duration-300"
+>                Schedule Consultation
               </button></div>
           </div>
           <div class="order-1 lg:order-2">
