--- a/index.html
+++ b/index.html
@@ -404,8 +404,12 @@
                 describing my clinical model metaphorically"
               </p>
             </div>
-            <div class="flex flex-col sm:flex-row gap-5 pt-4"><button class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
-                Explore Services
+            <div class="flex flex-col sm:flex-row gap-5 pt-4">
+<button
+  type="button"
+  onclick="window.location.href='WorkWithMe.html'"
+  class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl"
+>                Explore Services
               </button>
                 
 <button
