--- a/index.html
+++ b/index.html
@@ -1077,8 +1077,13 @@
         <div class="flex flex-col sm:flex-row gap-8 justify-center items-center mb-16">
           <button class="px-12 py-6 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
             Schedule a Consultation
-          </button><button class="px-12 py-6 bg-white/80 backdrop-blur-sm text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white transition-all duration-300">
-            Explore Services
+          </button>
+            
+            <button
+  type="button"
+  onclick="window.location.href='WorkWithMe.html'"
+  class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl"
+>            Explore Services
           </button></div>
         <div class="grid md:grid-cols-3 gap-8 mt-20">
           <div class="card-watercolor rounded-3xl p-12 hover-lift group"><i class="fa-solid fa-calendar-check text-4xl text-primary-brand mb-6 group-hover:scale-110 transition-transform duration-300"></i>
