--- a/index.html
+++ b/index.html
@@ -1080,12 +1080,16 @@
     type="button"
     onclick="window.open('https://app.acuityscheduling.com/schedule.php?owner=37720609', '_blank', 'noopener,noreferrer')"
     class="px-12 py-6 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl"
-  >
+  > 
+    Schedule a Consultation
+</button>
 <button
     type="button"
     onclick="window.location.href='WorkWithMe.html'"
     class="px-12 py-6 bg-white/80 backdrop-blur-sm text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white transition-all duration-300"
   >
+    Explore Services
+  </button>
     
     </div>
         <div class="grid md:grid-cols-3 gap-8 mt-20">
