--- a/index.html
+++ b/index.html
@@ -1110,9 +1110,8 @@
           tabindex="0"
           onclick="window.location.href='mailto:hello@vladacare.com'"
           class="card-watercolor rounded-3xl p-12 hover-lift group cursor-pointer"
-    >  i class="fa-solid fa-envelope text-4xl text-primary-brand mb-6 group-hover:scale-110 transition-transform duration-300"></i>
-
-<h3 class="heading-font text-3xl font-light text-gray-900 mb-3">
+    >  <i class="fa-solid fa-envelope text-4xl text-primary-brand mb-6 group-hover:scale-110 transition-transform duration-300"></i>
+            <h3 class="heading-font text-3xl font-light text-gray-900 mb-3">
               Get in Touch</h3>
             <p class="text-gray-600">Reach out with any questions</p>
           </div>
