--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,8 @@
   tabindex="0"
   onclick="window.open('https://app.acuityscheduling.com/schedule.php?owner=37720609', '_blank', 'noopener,noreferrer')"
   class="card-watercolor rounded-3xl p-12 hover-lift group cursor-pointer"
->            <h3 class="heading-font text-3xl font-light text-gray-900 mb-3">Book
+>            <i class="fa-solid fa-calendar-check text-4xl text-primary-brand mb-6 group-hover:scale-110 transition-transform duration-300"></i>
+            <h3 class="heading-font text-3xl font-light text-gray-900 mb-3">Book
               a Session</h3>
             <p class="text-gray-600">Schedule your first consultation</p>
           </div>
