--- a/index.html
+++ b/index.html
@@ -1155,15 +1155,15 @@
             <h4 class="heading-font text-xl font-light text-white mb-6">Quick
               Links</h4>
             <ul class="space-y-4">
-              <li><a href="#" class="hover:text-primary-brand transition font-light">Home</a>
+              <li><a href="home.html" class="hover:text-primary-brand transition font-light">Home</a>
               </li>
-              <li><a href="#" class="hover:text-primary-brand transition font-light">About</a>
+              <li><a href="index.html" class="hover:text-primary-brand transition font-light">About</a>
               </li>
-              <li><a href="#" class="hover:text-primary-brand transition font-light">Services</a>
+              <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Services</a>
               </li>
-              <li><a href="#" class="hover:text-primary-brand transition font-light">Approach</a>
+              <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Approach</a>
               </li>
-              <li><a href="#" class="hover:text-primary-brand transition font-light">Resources</a>
+              <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Resources</a>
               </li>
             </ul>
           </div>
