--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -228,8 +228,11 @@
                   </ul>
                 </div>
                 
-                <button class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
-                  Book a Session
+<button
+  type="button"
+  onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86591312', '_blank', 'noopener,noreferrer')"
+  class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl"
+>                  Book a Session
                 </button>
               </div>
             </div>
