--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -311,7 +311,7 @@
                   <i class="fa-solid fa-spa text-white text-4xl"></i>
                 </div>
                 <div class="price-badge rounded-2xl px-6 py-3 inline-block">
-                  <p class="heading-font text-3xl font-light text-primary-brand">$1,800</p>
+                  <p class="heading-font text-3xl font-light text-primary-brand">$2,280</p>
                 </div>
               </div>
               
@@ -353,11 +353,17 @@
                 </div>
                 
                 <div class="flex flex-wrap gap-4">
-                  <button class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
-                    Begin 12-Week Program
+<button
+  type="button"
+  onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86599006', '_blank', 'noopener,noreferrer')"
+  class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl"
+>                    Begin 12-Week Program
                   </button>
-                  <button class="px-10 py-4 bg-white text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white/80 transition-all duration-300">
-                    Schedule a Consultation
+<button
+  type="button"
+  onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86419526', '_blank', 'noopener,noreferrer')"
+  class="px-10 py-4 bg-white text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white/80 transition-all duration-300"
+>                    Schedule a Consultation
                   </button>
                 </div>
               </div>
