--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -419,11 +419,17 @@
                 </div>
                 
                 <div class="flex flex-wrap gap-4">
-                  <button class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
-                    Join 6-Month Program
+<button
+  type="button"
+  onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86601441', '_blank', 'noopener,noreferrer')"
+  class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl"
+>                    Join 6-Month Program
                   </button>
-                  <button class="px-10 py-4 bg-white text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white/80 transition-all duration-300">
-                    Schedule a Consultation
+<button
+  type="button"
+  onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86419526', '_blank', 'noopener,noreferrer')"
+  class="px-10 py-4 bg-white text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white/80 transition-all duration-300"
+>                    Schedule a Consultation
                   </button>
                 </div>
               </div>
