--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -558,8 +558,11 @@
           <p class="text-xl font-light mb-10 max-w-2xl mx-auto text-gray-50">
             Let's talk. During a consultation, we'll explore your goals, capacity, and what level of support is right for you.
           </p>
-          <button class="px-12 py-5 bg-white text-primary-brand rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
-            Schedule a Consultation
+<button
+  type="button"
+  onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86419526', '_blank', 'noopener,noreferrer')"
+  class="px-10 py-4 bg-white text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white/80 transition-all duration-300"
+>            Schedule a Consultation
           </button>
         </div>
       </div>
