--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -662,11 +662,17 @@
         </p>
         
         <div class="flex flex-col sm:flex-row gap-8 justify-center items-center">
-          <button class="px-14 py-6 bg-primary-brand text-white rounded-full font-light text-lg tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
-            Schedule a Consultation
+<button
+  type="button"
+  onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86419526', '_blank', 'noopener,noreferrer')"
+  class="px-10 py-4 bg-white text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white/80 transition-all duration-300"
+>            Schedule a Consultation
           </button>
-          <button class="px-14 py-6 bg-white/80 backdrop-blur-sm text-primary-brand border-2 border-primary-brand/30 rounded-full font-light text-lg tracking-wide hover:bg-white transition-all duration-300">
-            Learn More About Services
+<button
+  type="button"
+  onclick="window.scrollTo({ top: 0, behavior: 'smooth' })"
+  class="px-14 py-6 bg-white/80 backdrop-blur-sm text-primary-brand border-2 border-primary-brand/30 rounded-full font-light text-lg tracking-wide hover:bg-white transition-all duration-300"
+>            Learn More About Services
           </button>
         </div>
       </div>
