--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -665,7 +665,7 @@
 <button
   type="button"
   onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86419526', '_blank', 'noopener,noreferrer')"
-  class="px-10 py-4 bg-white text-primary-brand border border-primary-brand/30 rounded-full font-light tracking-wide hover:bg-white/80 transition-all duration-300"
+  class="px-14 py-6 bg-primary-brand text-white rounded-full font-light text-lg tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl"
 >            Schedule a Consultation
           </button>
 <button
