--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -702,10 +702,10 @@
           <div>
             <h4 class="heading-font text-xl font-light text-white mb-6">Quick Links</h4>
             <ul class="space-y-4">
-              <li><a href="#" class="hover:text-primary-brand transition font-light">Home</a></li>
-              <li><a href="#" class="hover:text-primary-brand transition font-light">About</a></li>
-              <li><a href="#" class="hover:text-primary-brand transition font-light">Work With Me</a></li>
-              <li><a href="#" class="hover:text-primary-brand transition font-light">Resources</a></li>
+              <li><a href="home.html" class="hover:text-primary-brand transition font-light">Home</a></li>
+              <li><a href="About.html" class="hover:text-primary-brand transition font-light">About</a></li>
+              <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Work With Me</a></li>
+              <li><a href="about.html" class="hover:text-primary-brand transition font-light">Resources</a></li>
             </ul>
           </div>
           <div>
