--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Vlada Care | Trauma-Informed Psychotherapy</title>
-<meta name="description" content="Trauma-informed, somatic and experiential psychotherapy with Vlada Zapesotsky, PhD. Nervous-system–based care for adults, parents, adolescents, and leaders.">
+     <title>Vlada Care | Trauma-Informed Mental Health Support </title>
+<meta name="description" content="Trauma-informed, somatic and experiential Mental Health Support with Vlada Zapesotsky for adults, parents, adolescents, and leaders.">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
