--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
               <div class="absolute -inset-8 bg-gradient-to-br from-primary-brand/10 via-transparent to-accent-rose/5 rounded-[3rem] blur-3xl breathe-animation">
               </div>
               <div class="relative rounded-[2.5rem] overflow-hidden luxury-shadow border border-white/50">
-                  <img src="vlada_main_pic.png"
+                  <img src="http://vladacare.com/vlada_main_pic.png"
                     alt="Professional portrait of a compassionate female therapist" class="w-full h-auto object-cover"></div>
             </div>
           </div>
