--- a/home.html
+++ b/home.html
@@ -211,8 +211,8 @@
             Vlada Zapesotsky
         </div>
         <nav class="hidden md:flex items-center space-x-8 lg:space-x-12">
-            <a href="home.html" class="text-primary-brand font-semibold tracking-wide">Home</a>
-            <a href="index.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
+            <a href="Home.html" class="text-primary-brand font-semibold tracking-wide">Home</a>
+            <a href="Index.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
             <a href="WorkWithMe.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
         </nav>
         <div class="flex items-center space-x-4">
@@ -425,85 +425,99 @@
     </section>
 
     <section id="who-i-support-home" class="py-32 lg:py-40 bg-white">
-        <div class="max-w-7xl mx-auto px-6 lg:px-12">
-            <div class="text-center mb-20">
-                <div class="inline-flex items-center px-5 py-2.5 bg-white/60 backdrop-blur-sm rounded-full mb-8 border border-primary-brand/20">
-                    <span class="text-xs font-light text-primary-brand tracking-[0.2em] uppercase">Who I Support</span>
-                </div>
-                <h2 class="heading-font text-5xl lg:text-6xl font-light text-gray-900 mb-8 text-balance">
-                    This Work Is For You If You Want:
-                </h2>
-                <div class="zen-divider w-32 mx-auto mb-8"></div>
+    <div class="max-w-7xl mx-auto px-6 lg:px-12">
+        <div class="text-center mb-20">
+            <div class="inline-flex items-center px-5 py-2.5 bg-white/60 backdrop-blur-sm rounded-full mb-8 border border-primary-brand/20">
+                <span class="text-xs font-light text-primary-brand tracking-[0.2em] uppercase">Who I Support</span>
             </div>
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-16">
-                <div class="card-watercolor rounded-3xl p-10 hover-lift">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fa-solid fa-heart-crack text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed">To heal long-standing trauma patterns</p>
+            <h2 class="heading-font text-5xl lg:text-6xl font-light text-gray-900 mb-8 text-balance">
+                This Work Is For You If You Want:
+            </h2>
+            <div class="zen-divider w-32 mx-auto mb-8"></div>
+        </div>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-16">
+            <div class="card-watercolor rounded-3xl p-10 hover-lift">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-heart-crack text-3xl text-primary-brand"></i>
                 </div>
-                <div class="card-watercolor rounded-3xl p-10 hover-lift">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fa-solid fa-tree text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed">To feel more grounded and emotionally steady</p>
-                </div>
-                <div class="card-watercolor rounded-3xl p-10 hover-lift">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fa-solid fa-wind text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed">To reduce stress, reactivity, or emotional overwhelm</p>
-                </div>
-                <div class="card-watercolor rounded-3xl p-10 hover-lift">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fa-solid fa-hand-holding-heart text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed">To deepen your relationship with yourself</p>
-                </div>
-                <div class="card-watercolor rounded-3xl p-10 hover-lift">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fa-solid fa-link text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed">To strengthen relational patterns or communication</p>
-                </div>
-                <div class="card-watercolor rounded-3xl p-10 hover-lift">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fa-solid fa-child-reaching text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed">To support your child or adolescent with emotional development</p>
-                </div>
-                <div class="card-watercolor rounded-3xl p-10 hover-lift">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fa-solid fa-hands-holding-child text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed">To repair and transform parent–child dynamics</p>
-                </div>
-                <div class="card-watercolor rounded-3xl p-10 hover-lift">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fa-solid fa-puzzle-piece text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed">To understand ASD or SMI through a trauma-informed, body-based lens</p>
-                </div>
-                <div class="card-watercolor rounded-3xl p-10 hover-lift">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
-                        <i class="fa-solid fa-crown text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed">To shift how you show up in leadership or high-demand roles</p>
-                </div>
-                <div class="card-watercolor rounded-3xl p-10 hover-lift md:col-span-2 lg:col-span-3">
-                    <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6 mx-auto">
-                        <i class="fa-solid fa-building-columns text-3xl text-primary-brand"></i>
-                    </div>
-                    <p class="text-gray-800 text-lg font-medium leading-relaxed text-center">To build the internal architecture for long-term resilience</p>
-                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed">To heal long-standing trauma patterns</p>
             </div>
-            <div class="bg-gradient-to-br from-primary-brand to-[#A68575] rounded-[3rem] p-16 lg:p-20 text-white text-center">
-                <p class="text-2xl font-light leading-relaxed mindful-spacing max-w-4xl mx-auto">
-                    My work honors your individuality — no two sessions or programs are the same.
+            <div class="card-watercolor rounded-3xl p-10 hover-lift">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-tree text-3xl text-primary-brand"></i>
+                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed">To feel more grounded and emotionally steady</p>
+            </div>
+            <div class="card-watercolor rounded-3xl p-10 hover-lift">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-wind text-3xl text-primary-brand"></i>
+                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed">To reduce stress, reactivity, or emotional overwhelm</p>
+            </div>
+            <div class="card-watercolor rounded-3xl p-10 hover-lift">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-hand-holding-heart text-3xl text-primary-brand"></i>
+                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed">To deepen your relationship with yourself</p>
+            </div>
+            <div class="card-watercolor rounded-3xl p-10 hover-lift">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-link text-3xl text-primary-brand"></i>
+                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed">To strengthen relational patterns or communication</p>
+            </div>
+            <div class="card-watercolor rounded-3xl p-10 hover-lift">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-child-reaching text-3xl text-primary-brand"></i>
+                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed">To support your child or adolescent with emotional development</p>
+            </div>
+            <div class="card-watercolor rounded-3xl p-10 hover-lift">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-hands-holding-child text-3xl text-primary-brand"></i>
+                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed">To repair and transform parent–child dynamics</p>
+            </div>
+            <div class="card-watercolor rounded-3xl p-10 hover-lift">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-puzzle-piece text-3xl text-primary-brand"></i>
+                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed">To understand ASD or SMI through a trauma-informed, body-based lens</p>
+            </div>
+            <div class="card-watercolor rounded-3xl p-10 hover-lift">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-crown text-3xl text-primary-brand"></i>
+                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed">To shift how you show up in leadership or high-demand roles</p>
+            </div>
+            <div class="card-watercolor rounded-3xl p-10 hover-lift md:col-span-2 lg:col-span-3">
+                <div class="w-16 h-16 bg-gradient-to-br from-primary-brand/10 to-primary-brand/5 rounded-2xl flex items-center justify-center mb-6 mx-auto">
+                    <i class="fa-solid fa-building-columns text-3xl text-primary-brand"></i>
+                </div>
+                <p class="text-gray-800 text-lg font-medium leading-relaxed text-center">To build the internal architecture for long-term resilience</p>
+            </div>
+        </div>
+        <div class="relative bg-gradient-to-br from-[#f9f6f3] via-white to-[#f7f3ef] rounded-[3rem] p-16 lg:p-20 text-center luxury-shadow border-2 border-primary-brand/20 overflow-hidden group">
+            <div class="absolute inset-0 bg-gradient-to-r from-primary-brand/5 via-accent-rose/5 to-primary-brand/5 opacity-0 group-hover:opacity-100 transition-opacity duration-700"></div>
+            <div class="absolute -top-20 -left-20 w-40 h-40 bg-primary-brand/10 rounded-full blur-3xl animate-pulse"></div>
+            <div class="absolute -bottom-20 -right-20 w-40 h-40 bg-accent-rose/10 rounded-full blur-3xl animate-pulse" style="animation-delay: 1s;"></div>
+            <div class="relative z-10">
+                <div class="inline-flex items-center justify-center w-20 h-20 bg-gradient-to-br from-primary-brand to-[#A68575] rounded-2xl mb-8 mx-auto shadow-lg group-hover:scale-110 transition-transform duration-500">
+                    <i class="fa-solid fa-fingerprint text-white text-3xl"></i>
+                </div>
+                <p class="heading-font text-3xl lg:text-4xl font-light text-gray-900 leading-relaxed mindful-spacing max-w-4xl mx-auto mb-4">
+                    My work honors your <span class="relative inline-block">
+                        <span class="relative z-10 font-medium text-primary-brand">individuality</span>
+                        <span class="absolute bottom-0 left-0 w-full h-3 bg-accent-rose/20 -z-0 group-hover:h-full transition-all duration-500"></span>
+                    </span>
+                </p>
+                <p class="text-xl lg:text-2xl text-gray-700 font-light italic mindful-spacing">
+                    No two sessions or programs are the same.
                 </p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <section id="my-method" class="py-32 lg:py-40 watercolor-bg watercolor-overlay relative">
     <div class="max-w-7xl mx-auto px-6 lg:px-12">
