--- a/home.html
+++ b/home.html
@@ -592,7 +592,7 @@
         <div class="max-w-7xl mx-auto px-6 lg:px-12">
             <div class="grid lg:grid-cols-2 gap-20 items-center">
                 <div class="relative rounded-3xl overflow-hidden luxury-shadow h-[600px]">
-                    <img class="w-full h-full object-cover" src="https://storage.googleapis.com/uxpilot-auth.appspot.com/9eb75c14fc-40e670d8ef517808c122.png" alt="Professional portrait of compassionate female therapist in warm office setting, soft natural lighting, watercolor style, earth tones, welcoming atmosphere">
+                    <img class="w-full h-full object-cover" src="https://vladacare.com/vlada_main_pic.png" alt="Professional portrait of compassionate female therapist in warm office setting, soft natural lighting, watercolor style, earth tones, welcoming atmosphere">
                 </div>
                 <div class="space-y-8">
                     <div class="inline-flex items-center px-5 py-2.5 bg-primary-brand/5 rounded-full mb-4">
