--- a/home.html
+++ b/home.html
@@ -226,8 +226,8 @@
     </div>
     <div id="mobile-menu" class="hidden md:hidden bg-white/95 backdrop-blur-md border-t border-gray-100">
         <nav class="px-4 py-6 space-y-4">
-            <a href="Home.html" class="block text-primary-brand font-semibold tracking-wide py-2">Home</a>
-            <a href="Index.html" class="block text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide py-2">About</a>
+            <a href="home.html" class="block text-primary-brand font-semibold tracking-wide py-2">Home</a>
+            <a href="index.html" class="block text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide py-2">About</a>
             <a href="WorkWithMe.html" class="block text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide py-2">Work With Me</a>
             <button type="button" onclick="window.open('https://app.acuityscheduling.com/schedule.php?owner=37720609', '_blank', 'noopener,noreferrer')" class="btn-animated w-full px-6 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide text-sm mt-4">
                 Schedule Consultation
