--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -21,7 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&amp;family=Montserrat:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
     <style>
       ::-webkit-scrollbar {
         display: none;
@@ -111,35 +111,38 @@
 
   <body class="bg-[#fdfcfb]">
     <header id="header" class="bg-white/80 backdrop-blur-md shadow-sm sticky top-0 z-50 border-b border-gray-100">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12 py-4 sm:py-6">
-    <div class="flex justify-between items-center">
-      <div class="heading-font text-2xl sm:text-3xl font-light text-primary-brand tracking-wide">
+  <div class="max-w-7xl mx-auto px-6 lg:px-12 py-6">
+    <div class="flex justify-between items-center lg:grid lg:grid-cols-3">
+      <div class="heading-font text-3xl font-light text-primary-brand tracking-wide lg:justify-self-start">
         Vlada Zapesotsky
       </div>
       
-      <nav class="hidden lg:flex items-center space-x-8">
-        <a href="home.html" class="text-gray-700 hover:text-primary-brand transition font-light">Home</a>
-        <a href="index.html" class="text-gray-700 hover:text-primary-brand transition font-light">About</a>
-        <a href="WorkWithMe.html" class="text-primary-brand font-medium">Work With Me</a>
-        <button onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86419526', '_blank', 'noopener,noreferrer')" class="px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg">
-          Schedule Consultation
-        </button>
+      <nav class="hidden lg:flex items-center justify-center space-x-12">
+        <a href="Home" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
+        <a href="Index.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
+        <a href="WorkWithMe.html" class="text-primary-brand font-semibold tracking-wide">Work With Me</a>
       </nav>
 
-      <div class="flex items-center space-x-2 sm:space-x-4 lg:hidden">
-        <button onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86419526', '_blank', 'noopener,noreferrer')" class="px-4 sm:px-6 py-2 sm:py-2.5 bg-primary-brand text-white rounded-full font-light text-xs sm:text-sm tracking-wide hover:bg-opacity-90 transition-all duration-300 whitespace-nowrap">
+      <div class="hidden lg:flex items-center justify-end">
+        <button type="button" onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86419526', '_blank', 'noopener,noreferrer')" class="px-8 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 hover:shadow-lg">
+          Schedule Consultation
+        </button>
+      </div>
+
+      <div class="flex items-center space-x-4 lg:hidden">
+        <button type="button" onclick="window.open('https://vladazapesotsky.as.me/?appointmentType=86419526', '_blank', 'noopener,noreferrer')" class="px-6 py-2.5 bg-primary-brand text-white rounded-full font-light text-sm tracking-wide hover:bg-opacity-90 transition-all duration-300 whitespace-nowrap">
           Schedule
         </button>
         <button id="mobile-menu-toggle" class="text-gray-700 hover:text-primary-brand transition p-2" aria-label="Toggle menu">
-          <i class="fa-solid fa-bars text-xl sm:text-2xl"></i>
+          <i class="fa-solid fa-bars text-2xl"></i>
         </button>
       </div>
     </div>
 
     <div id="mobile-menu" class="hidden lg:hidden mt-6 pb-4 border-t border-gray-100 pt-6">
       <nav class="flex flex-col space-y-4">
-        <a href="home.html" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">Home</a>
-        <a href="index.html" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">About</a>
+        <a href="Home" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">Home</a>
+        <a href="Index.html" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">About</a>
         <a href="WorkWithMe.html" class="text-primary-brand font-medium text-lg py-2">Work With Me</a>
       </nav>
     </div>
@@ -220,7 +223,7 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-12">
         <div class="text-center mb-12 sm:mb-16 lg:mb-20">
           <div class="inline-flex items-center px-4 sm:px-5 py-2 sm:py-2.5 bg-white/60 backdrop-blur-sm rounded-full mb-6 sm:mb-8 border border-primary-brand/20">
-            <span class="text-xs font-light text-primary-brand tracking-[0.15em] sm:tracking-[0.2em] uppercase">Services & Programs</span>
+            <span class="text-xs font-light text-primary-brand tracking-[0.15em] sm:tracking-[0.2em] uppercase">Services &amp; Programs</span>
           </div>
           <h2 class="heading-font text-3xl sm:text-4xl lg:text-6xl font-light text-gray-900 mb-6 sm:mb-8 px-4">
             Choose Your Path
