--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -118,8 +118,8 @@
       </div>
       
       <nav class="hidden lg:flex items-center justify-center space-x-12">
-        <a href="Home" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
-        <a href="Index.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
+        <a href="home" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
+        <a href="index.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
         <a href="WorkWithMe.html" class="text-primary-brand font-semibold tracking-wide">Work With Me</a>
       </nav>
 
