--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -141,8 +141,8 @@
 
     <div id="mobile-menu" class="hidden lg:hidden mt-6 pb-4 border-t border-gray-100 pt-6">
       <nav class="flex flex-col space-y-4">
-        <a href="Home" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">Home</a>
-        <a href="Index.html" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">About</a>
+        <a href="home" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">Home</a>
+        <a href="index.html" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">About</a>
         <a href="WorkWithMe.html" class="text-primary-brand font-medium text-lg py-2">Work With Me</a>
       </nav>
     </div>
