--- a/home.html
+++ b/home.html
@@ -734,8 +734,8 @@
                 <div>
                     <h4 class="heading-font text-lg sm:text-xl font-light text-white mb-4 sm:mb-6">Quick Links</h4>
                     <ul class="space-y-3 sm:space-y-4 text-sm sm:text-base">
-                        <li><a href="Home.html" class="hover:text-primary-brand transition font-light">Home</a></li>
-                        <li><a href="Index.html" class="hover:text-primary-brand transition font-light">About</a></li>
+                        <li><a href="home.html" class="hover:text-primary-brand transition font-light">Home</a></li>
+                        <li><a href="index.html" class="hover:text-primary-brand transition font-light">About</a></li>
                         <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Services</a></li>
                         <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Approach</a></li>
                         <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Resources</a></li>
