--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </div>
     <nav class="hidden md:flex items-center space-x-12">
       <a href="home.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
-      <a href="Index.html" class="text-primary-brand font-semibold tracking-wide">About</a>
+      <a href="index.html" class="text-primary-brand font-semibold tracking-wide">About</a>
       <a href="WorkWithMe.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
     </nav>
     <div class="flex items-center space-x-6">
