--- a/home.html
+++ b/home.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Vlada Zapesotsky | Trauma-Informed Mental Health Support</title>
+    <meta name="description"
+     content="Learn about Vlada Zapesotsky’s trauma-informed approach to mental health, nervous system regulation, and emotional resilience."
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       window.FontAwesomeConfig = {
