--- a/home.html
+++ b/home.html
@@ -6,6 +6,25 @@
     <meta name="description"
      content="Learn about Vlada Zapesotsky’s trauma-informed approach to mental health, nervous system regulation, and emotional resilience."
     />
+<link rel="canonical" href="https://vladacare.com/home.html" />
+
+<meta property="og:site_name" content="Vlada Zapesotsky" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Home | Vlada Zapesotsky" />
+<meta property="og:description" content="Learn about Vlada Zapesotsky’s trauma-informed approach, who it’s for, and how sessions support healing, resilience, and emotional regulation." />
+<meta property="og:url" content="https://vladacare.com/home.html" />
+<!-- <meta property="og:image" content="https://vladacare.com/og-image.jpg" /> -->
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Home | Vlada Zapesotsky" />
+<meta name="twitter:description" content="Learn about Vlada Zapesotsky’s trauma-informed approach, who it’s for, and how sessions support healing, resilience, and emotional regulation." />
+<!-- <meta name="twitter:image" content="https://vladacare.com/og-image.jpg" /> -->
+
+
+
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       window.FontAwesomeConfig = {
