--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -25,7 +25,7 @@
 <meta name="twitter:title" content="Work With Me | Vlada Zapesotsky" />
 <meta name="twitter:description" content="Explore ways to work with Vlada Zapesotsky, including session options and scheduling. Trauma-informed mental health support in a calm, confidential setting." />
 <!-- <meta name="twitter:image" content="https://vladacare.com/og-image.jpg" /> -->
-    
+  <meta name="author" content="Vlada Zapesotsky" />  
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
