--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <!--   <meta property="og:image" content="https://vladacare.com/og-image.jpg" /> -->
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-
+<meta name="author" content="Vlada Zapesotsky" />
     <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Vlada Zapesotsky | Trauma-Informed Mental Health Support" />
 <meta name="twitter:description" content="Trauma-informed mental health support with Vlada Zapesotsky. A grounded, compassionate approach to nervous system regulation, resilience, and healing." />
