--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 <meta name="twitter:description" content="Learn about Vlada Zapesotsky’s trauma-informed approach, who it’s for, and how sessions support healing, resilience, and emotional regulation." />
 <!-- <meta name="twitter:image" content="https://vladacare.com/og-image.jpg" /> -->
 
-
+<meta name="author" content="Vlada Zapesotsky" />
 
     
     <script src="https://cdn.tailwindcss.com"></script>
