--- a/home.html
+++ b/home.html
@@ -222,6 +222,19 @@
         }
       }
     </style>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Vlada Zapesotsky",
+  "url": "https://vladacare.com/",
+  "jobTitle": "Mental Health Practitioner",
+  "knowsAbout": ["Trauma-informed care", "Nervous system regulation", "Somatic support"],
+  "sameAs": ["https://www.linkedin.com/in/vlada-zapesotsky-48237a1/"]
+}
+</script>
+    
 </head>
 
 <body class="bg-[#fdfcfb]">
