--- a/home.html
+++ b/home.html
@@ -13,14 +13,14 @@
 <meta property="og:title" content="Home | Vlada Zapesotsky" />
 <meta property="og:description" content="Learn about Vlada Zapesotsky’s trauma-informed approach, who it’s for, and how sessions support healing, resilience, and emotional regulation." />
 <meta property="og:url" content="https://vladacare.com/home.html" />
-<!-- <meta property="og:image" content="https://vladacare.com/og-image.jpg" /> -->
+ <meta property="og:image" content="https://vladacare.com/vlada_og_image.png" /> 
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Home | Vlada Zapesotsky" />
 <meta name="twitter:description" content="Learn about Vlada Zapesotsky’s trauma-informed approach, who it’s for, and how sessions support healing, resilience, and emotional regulation." />
-<!-- <meta name="twitter:image" content="https://vladacare.com/og-image.jpg" /> -->
+ <meta name="twitter:image" content="https://vladacare.com/vlada_og_image.png" />  
 
 <meta name="author" content="Vlada Zapesotsky" />
 
