--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 </script>
 
 
-    
+  <meta name="google-site-verification" content="Th7s9kMrUK5YxPLKJqX8PGM1eeMEuXCO7v3VzfG7i5U" />  
   </head>
 
   <body class="bg-[#fdfcfb]">
