--- a/index.html
+++ b/index.html
@@ -345,8 +345,17 @@
   "@type": "Person",
   "name": "Vlada Zapesotsky",
   "url": "https://vladacare.com/",
-  "jobTitle": "Mental Health Practitioner",
-  "knowsAbout": ["Trauma-informed care", "Nervous system regulation", "Somatic support"],
+  "jobTitle": "Trauma-Informed Mental Health Practitioner",
+  "description": "Trauma-informed mental health support using somatic and experiential approaches focused on nervous system regulation, emotional resilience, and healing.",
+  "image": "https://vladacare.com/og-image.jpg",
+  "knowsAbout": [
+    "Trauma-informed care",
+    "Somatic therapy",
+    "Nervous system regulation",
+    "Emotional resilience",
+    "Post-traumatic growth",
+    "Child and adolescent mental health",
+    "Parent-child co-regulation"  ],
   "sameAs": ["https://www.linkedin.com/in/vlada-zapesotsky-48237a1/"]
 }
 </script>
