--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -143,7 +143,29 @@
   "sameAs": ["https://www.linkedin.com/in/vlada-zapesotsky-48237a1/"]
 }
 </script>
-
+    
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MedicalBusiness",
+  "name": "Vlada Zapesotsky – Trauma-Informed Mental Health Support",
+  "url": "https://vladacare.com/",
+  "image": "https://vladacare.com/og-image.jpg",
+  "medicalSpecialty": [
+    "MentalHealth",
+    "Psychiatry"
+  ],
+  "areaServed": {
+    "@type": "Place",
+    "name": "Online / Telehealth"
+  },
+  "availableService": {
+    "@type": "MedicalTherapy",
+    "name": "Trauma-Informed Mental Health Support",
+    "description": "Somatic and experiential mental health support focused on regulation, resilience, and emotional well-being."
+  }
+}
+</script>
     
   </head>
 
