--- a/index.html
+++ b/index.html
@@ -360,6 +360,29 @@
 }
 </script>
 
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MedicalBusiness",
+  "name": "Vlada Zapesotsky – Trauma-Informed Mental Health Support",
+  "url": "https://vladacare.com/",
+  "image": "https://vladacare.com/og-image.jpg",
+  "medicalSpecialty": [
+    "MentalHealth",
+    "Psychiatry"
+  ],
+  "areaServed": {
+    "@type": "Place",
+    "name": "Online / Telehealth"
+  },
+  "availableService": {
+    "@type": "MedicalTherapy",
+    "name": "Trauma-Informed Mental Health Support",
+    "description": "Somatic and experiential mental health support focused on regulation, resilience, and emotional well-being."
+  }
+}
+</script>
+
 
   <meta name="google-site-verification" content="Th7s9kMrUK5YxPLKJqX8PGM1eeMEuXCO7v3VzfG7i5U" />  
   </head>
