--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -147,23 +147,19 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "MedicalBusiness",
-  "name": "Vlada Zapesotsky – Trauma-Informed Mental Health Support",
+  "@type": "ProfessionalService",
+  "name": "Vlada Zapesotsky – Trauma-Informed Support",
   "url": "https://vladacare.com/",
   "image": "https://vladacare.com/og-image.jpg",
-  "medicalSpecialty": [
-    "MentalHealth",
-    "Psychiatry"
-  ],
+  "description": "Trauma-informed, somatic and experiential mental health support focused on regulation, resilience, and emotional well-being.",
   "areaServed": {
     "@type": "Place",
     "name": "Online / Telehealth"
   },
-  "availableService": {
-    "@type": "MedicalTherapy",
-    "name": "Trauma-Informed Mental Health Support",
-    "description": "Somatic and experiential mental health support focused on regulation, resilience, and emotional well-being."
-  }
+  "serviceType": "Trauma-informed mental health support",
+  "sameAs": [
+    "https://www.linkedin.com/in/vlada-zapesotsky-48237a1/"
+  ]
 }
 </script>
     
